--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="banner_content_v8 text-center color_white">
-                        <a href="index.html"><img src="images/logo_v8.png" alt="logo"></a>
+                        <a href="index.html"><img src="https://s1.ax1x.com/2020/04/25/JsebP1.png" alt="logo"></a>
 
                         <div class="title parallax parallax1">
                             <h2 class="playfair pb_50 parallax parallax2"><i>Welcome to portfolio of</i></h2>
