--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="AB Belal">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
-    <title>Personal Portfolio</title>
+    <title>XxxTang</title>
 
     <!--favicon icon-->
     <link rel="icon" href="images/favicon.png">
